noticed some issues on mobile. needs more work

--- a/css/style.css
+++ b/css/style.css
@@ -2208,6 +2208,10 @@ button {  width: auto; overflow: visible; }
 
 	overflow: visible;
 	padding-bottom: 3em;
+	
+	position:absolute;
+	z-index: 12;
+	
 }
 
 #decoBar{
